# python-calculator-cicd

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
src/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py
